--- a/Tic Tac Toe/index.html
+++ b/Tic Tac Toe/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
-
+    <div class="message hidden">
+        <p>Winner</p>
+        <button class="new-button">New Game</button>
+    </div>
     <div class="container">
         <div class="game">
             <button class="box"></button>
